--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONT -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -11,7 +16,7 @@
 
     <div  id="title">
         <h1>FizzBuzzDom</h1>
-
+        
     </div>
 
     <div id="container">
